# treasure_your_passwords

./: Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md  cache67.txt  ssh_private_key_bare_file_name.cfg  temp67.txt  treasure_config.json
.github/workflows/: rust_fmt_auto_build_test.yml  win_rust_fmt_auto_build_test.yml
automation_tasks_rs/: Cargo.toml  README.md  cargo_auto_config.json
automation_tasks_rs/src/: build_win_cli_bin_mod.rs  cargo_auto_github_api_mod.rs  main.rs  secrets_always_local_mod.rs
automation_tasks_rs/src/encrypt_decrypt_with_ssh_key_mod/: crates_io_api_token_mod.rs  docker_io_api_token_mod.rs  github_api_token_with_oauth2_mod.rs  mod.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/search.desc/treasure/: treasure-desc-0-.js
docs/search.desc/treasure_your_passwords/: treasure_your_passwords-desc-0-.js
docs/src/treasure/: main.rs.html
docs/src/treasure/encrypt_decrypt_with_ssh_key_mod/: generate_strong_password_mod.rs.html  mod.rs.html  secret_vault_mod.rs.html
docs/src/treasure_your_passwords/: main.rs.html
docs/src/treasure_your_passwords/encrypt_decrypt_with_ssh_key_mod/: encrypt_decrypt_mod.rs.html  generate_strong_password_mod.rs.html  mod.rs.html  secret_vault_mod.rs.html
docs/trait.impl/core/fmt/: trait.Display.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/trait.impl/serde/de/: trait.Deserialize.js
docs/trait.impl/serde/ser/: trait.Serialize.js
docs/trait.impl/serde_core/de/: trait.Deserialize.js
docs/trait.impl/serde_core/ser/: trait.Serialize.js
docs/trait.impl/treasure_your_passwords/: trait.ResultLogError.js
docs/treasure/: all.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.convert_to_strong_password.html  fn.delete_token.html  fn.list_token_names.html  fn.main.html  fn.print_help.html  fn.show_token.html  fn.store_token.html  index.html
docs/treasure/encrypt_decrypt_with_ssh_key_mod/: constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.decode64_from_string_to_32bytes.html  fn.decode64_from_string_to_string.html  fn.decrypt_symmetric.html  fn.encode64_from_32bytes_to_string.html  fn.encode64_from_bytes_to_string.html  fn.encode64_from_string_to_string.html  fn.encrypt_symmetric.html  fn.get_encrypted_file_path.html  fn.get_private_key_file_path.html  fn.open_file_b64_get_string.html  fn.random_seed_32bytes_and_string.html  fn.shorten_vec_bytes_to_32bytes.html  fn.sign_seed_with_private_key_file.html  fn.sign_seed_with_ssh_agent.html  fn.sign_seed_with_ssh_agent_or_private_key_file.html  index.html  sidebar-items.js  struct.EncryptedTextWithMetadata.html
docs/treasure/encrypt_decrypt_with_ssh_key_mod/generate_strong_password_mod/: fn.generate_strong_password.html  index.html  sidebar-items.js
docs/treasure/encrypt_decrypt_with_ssh_key_mod/secret_vault_mod/: fn.delete_token_from_vault.html  fn.list_token_from_vault.html  fn.show_secret_token_from_vault.html  fn.store_secret_token_to_vault.html  index.html  sidebar-items.js
docs/treasure_your_passwords/: all.html  constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.convert_to_strong_password.html  fn.delete_token.html  fn.list_token_names.html  fn.main.html  fn.main_returns_anyhow_result.html  fn.panic_set_hook.html  fn.print_help.html  fn.read_bare_file_name.html  fn.show_token.html  fn.store_token.html  fn.tracing_init.html  fn.treasure_config_initialize.html  index.html  sidebar-items.js  static.TREASURE_CONFIG.html  struct.TreasureConfig.html  trait.ResultLogError.html
docs/treasure_your_passwords/encrypt_decrypt_with_ssh_key_mod/: constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.decode64_from_string_to_32bytes.html  fn.decode64_from_string_to_string.html  fn.decrypt_symmetric.html  fn.encode64_from_32bytes_to_string.html  fn.encode64_from_bytes_to_string.html  fn.encode64_from_string_to_string.html  fn.encrypt_symmetric.html  fn.get_encrypted_file_path.html  fn.get_private_key_file_path.html  fn.open_file_b64_get_string.html  fn.random_seed_32bytes_and_string.html  fn.shorten_vec_bytes_to_32bytes.html  fn.sign_seed_with_private_key_file.html  fn.sign_seed_with_ssh_agent.html  fn.sign_seed_with_ssh_agent_or_private_key_file.html  index.html  sidebar-items.js  struct.EncryptedTextWithMetadata.html
docs/treasure_your_passwords/encrypt_decrypt_with_ssh_key_mod/encrypt_decrypt_mod/: fn.decode64_from_string_to_32bytes.html  fn.decode64_from_string_to_string.html  fn.decrypt_symmetric.html  fn.encode64_from_32bytes_to_string.html  fn.encode64_from_bytes_to_string.html  fn.encode64_from_string_to_string.html  fn.encrypt_symmetric.html  fn.open_file_b64_get_string.html  fn.random_seed_32bytes_and_string.html  fn.shorten_vec_bytes_to_32bytes.html  fn.sign_seed_with_private_key_file.html  fn.sign_seed_with_ssh_agent.html  fn.sign_seed_with_ssh_agent_or_private_key_file.html  fn.tilde_expand_to_home_dir_utf8.html  index.html  sidebar-items.js  struct.EncryptedTextWithMetadata.html  struct.PathStructInSshFolder.html
docs/treasure_your_passwords/encrypt_decrypt_with_ssh_key_mod/generate_strong_password_mod/: fn.generate_strong_password.html  index.html
docs/treasure_your_passwords/encrypt_decrypt_with_ssh_key_mod/secret_vault_mod/: fn.delete_token_from_vault.html  fn.list_token_from_vault.html  fn.list_tokens_from_vault.html  fn.show_secret_token_from_vault.html  fn.store_secret_token_to_vault.html  index.html  sidebar-items.js
src/: main.rs
src/encrypt_decrypt_with_ssh_key_mod/: encrypt_decrypt_mod.rs  generate_strong_password_mod.rs  mod.rs  secret_vault_mod.rs
