[package]
name = "treasure_your_passwords"
version = "0.0.81"
description = "Use SSH private key to store your passwords locally and make them strong"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/treasure_your_passwords"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained", "ready-for-use", "rustlang"]
# allowed categories are listed here <https://crates.io/category_slugs>
categories = ["command-line-interface"]
# publish as a cargo tool. Only this files.
publish = false
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependencies in Cargo.toml look like a specific version of the crate, they are just like a caret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt", "time"] }
tracing-appender="0.2.3"
time = {version="0.3.39", features=["macros","local-offset"]}

thiserror = "2.0.12"
anyhow="1.0.97"
# the last version of reqwest that builds in win-git-bah is 0.12.12
reqwest={version="=0.12.12", features=["json","blocking"]}
serde ={ version= "1.0.219", features=["std","derive"]}
serde_json = "1.0.140"
ssh-key = { version = "0.6.7", features = [ "rsa", "encryption","ed25519"] }
ssh_agent_client_rs_git_bash = "0.0.19"
rsa = { version = "0.9.8", features = ["sha2"] }
zeroize = {version="1.8.1", features=["derive"]}
aes-gcm = "0.10.3"
camino = "1.1.9"
base64ct = {version = "1.7.3", features = ["alloc"] }
secrecy = "0.10.3"
home = "0.5.11"
inquire="0.9.1"
